### Author : Avadesh Meduri
### Date : 27/09/2019
### This package contains deepq_stepper 

cmake_minimum_required(VERSION 2.8.3)

project(deepq_stepper)

find_package(catkin REQUIRED)
catkin_package()
catkin_python_setup()

##########################
# building documentation #
##########################
#build_doxygen_documentation()
