<?xml version="1.0"?>
<package>
  <name>deepq_stepper</name>
  <version>1.0.0</version>
  <description>This packages contains deepq_stepper</description>
  <author email="am9789@nyu.edu">Avadesh Meduri</author>
  <maintainer email="am9789@nyu.edu">Avadesh Meduri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
